# fairweather

./: .gitignore  MANIFEST.in  README.md  package.json  pyproject.toml  setup.py  watch
fairweather/: __init__.py  api.py  hooks.py  modules.txt  patches.txt  queries.py  sessions.py
fairweather/avalara/doctype/avalara_state/: avalara_state.js  avalara_state.json  avalara_state.py  test_avalara_state.py
fairweather/avalara/doctype/avalara_tax_rate/: avalara_tax_rate.js  (+3 more)
fairweather/change_log/v2/: v2_0_10.md
fairweather/config/: desktop.py  docs.py
fairweather/controllers/: customer.py  delivery_note.py  exceptions.py  sales_invoice.py  sales_order.py  selling_common.py
fairweather/controllers/frappe/: notification.py
fairweather/events/: contact.py  item.py
fairweather/fixtures/: workflow.json  workflow_state.json
fairweather/patches/v1/: remove_property_setter_for_workflow_action.py
fairweather/public/: build.json
fairweather/public/js/: credit_mapping_tool.bundle.js  delivery_note.js  item.js  sales_invoice.js  sales_order.js
fairweather/queries/: credit_mapping_tool.py
fairweather/scheduler/: __init__.py
fairweather/scheduler/all/: __init__.py
fairweather/scheduler/daily/: __init__.py  monthly_statement_notificator.py
fairweather/scheduler/hourly/: __init__.py
fairweather/scheduler/monthly/: __init__.py
fairweather/scheduler/weekly/: __init__.py
fairweather/templates/: state.templates.html
fairweather/templates/includes/: statement_of_accounts.html  states.incl.html
fairweather/templates/pages/: states.website.html
(+115 files in other folders)
