[project]
name = "fairweather"
authors = [
    { name = "Yefri Tavarez", email = "yefritavarez@gmail.com"}
]
description = "Fairweather Innovations custom app and ERPNext customizations"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "frappe~=14.0.0",
    "erpnext~=14.0.0",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.dev-dependencies]
hypothesis = "~=6.31.0"

[tool.black]
line-length = 79

[tool.isort]
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
indent = "\t"
indent_size = 4
